--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   skip: True  # [py35]
-  number: 0
+  number: 1
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -33,6 +33,7 @@ test:
 about:
   home: https://github.com/selwin/python-user-agents
   license: MIT
+  license_file: LICENSE.txt
   summary: 'A library to identify devices (phones, tablets) and their capabilities by parsing (browser/HTTP) user agent strings'
 
 extra:
