--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,29 +1,22 @@
-{%set name = "user-agents" %}
-{%set version = "1.1.0" %}
-{%set compress_type = "tar.gz" %}
-{%set hash_type = "sha256" %}
-{%set hash_val = "643d16772280052b546d956971d719989ef6dc9b17d9ff0386aa21391a038039" %}
-{%set build_num = "0" %}
+{% set version = "1.1.0" %}
 
 package:
-  name: {{ name }}
+  name: user-agents
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ compress_type }}
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ compress_type }}
-  {{ hash_type }}: {{ hash_val }}
+  url: https://pypi.io/packages/source/u/user-agents/user-agents-{{ version }}.tar.gz
+  sha256: 643d16772280052b546d956971d719989ef6dc9b17d9ff0386aa21391a038039
 
 build:
-  skip: True  # [py>34]
-  number: {{ build_num }}
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  number: 0
+  noarch: python
+  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
 
 requirements:
-  build:
+  host:
     - python
-    - setuptools
-
+    - pip
   run:
     - python
     - ua-parser >=0.4.1
